# test_darcy_universal_mas_mvp1_changes

universalmas-mvp1-changes/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  config.yaml  consolidate_intent_classifier.py  docker-compose.network-resilient.yml  docker-compose.yml  langgraph.json  pyproject.toml  requirements-dev.txt  requirements.txt
universalmas-mvp1-changes/.github/: copilot-instructions.md  dependabot.yml
universalmas-mvp1-changes/.github/workflows/: ci.yml  security.yml
universalmas-mvp1-changes/config/: compliance.toml  config.yaml  email_request.json  langsmith.toml  llm.toml
universalmas-mvp1-changes/docs/: ARCHITECTURE_CONSOLIDATED.md  README.md  defensive_programming_implementation.md  docker_network_resilience_fix.md  priority_action_plan.md
universalmas-mvp1-changes/docs/architecture/: architecture.md  email_workflow_architecture.md  scaling_guide.md  security_features.md
universalmas-mvp1-changes/docs/compliance/: MIGRATION_GUIDE.md  compliance_patterns.md
universalmas-mvp1-changes/docs/config/: config.md  langgraph_studio_setup.md  langgraph_studio_usage_guide.md  safe-mode-implementation.md  safe-mode.md
universalmas-mvp1-changes/docs/deployment/: RENDER_DEPLOYMENT.md
universalmas-mvp1-changes/docs/langgraph/: index.md
universalmas-mvp1-changes/docs/planning/: README.md  conversation_aware_intent_classification_blueprint.md  critical_production_issues_emergency_fix.md  defensive_programming_milestone.md  defensive_programming_strategy.md  legacy_cleanup_implementation_plan.md  legacy_intent_classifier_cleanup_plan.md  legacy_pattern_modernization_roadmap.md  mcp_vs_context_extraction_analysis.md  nodes_agents_reorganization_plan.md  phase_2_4_implementation_plan.md  (+1 more)
universalmas-mvp1-changes/fixtures/: __init__.py
universalmas-mvp1-changes/scripts/: analyze_logger_functionality.py  docker_build_resilient.ps1  docker_build_resilient.py  docker_requirements_check.ps1  enhanced_migration_controller.py  fix_structlog_imports.py  langgraph_studio_server.py  migrate_logger_usage.py  minimal_studio_server.py  setup.sh  start_debug_server.py  validate_environment.sh
universalmas-mvp1-changes/tests/: conftest.py  test_environment.py  test_environment_validation.py
(+225 files in other folders)
